larger update people and research

--- a/about.html
+++ b/about.html
@@ -400,9 +400,11 @@ $(document).ready(function () {
 <div id="research-experience" class="section level2">
 <h2>Research experience</h2>
 <ul>
-<li>From 2019 Group leader - Botanical Institute, University of Cologne,
-Germany<br />
-<a href="https://www.cropevolution.org/">Stetter lab</a><br />
+<li>Since 2024 Professor - Institute for Plant Sciences, University of
+Cologne, Germany<br />
+</li>
+<li>2019 - 2023 Group leader - Botanical Institute, University of
+Cologne, Germany<br />
 </li>
 <li>2017 -2019 Postdoc - Department of Plant Sciences, University of
 California Davis, USA<br />
