--- a/people.html
+++ b/people.html
@@ -412,9 +412,39 @@ University of Cologne <a href="about.html">read more</a></p>
 <div id="postdocs" class="section level2">
 <h2>Postdocs</h2>
 <div style="float: left">
+<p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Maxime Kadner</strong>
+<div style="float: left">
+<p><a href=""><img src="own_images/email_icon.png" style="width: 30px;"></a></p>
+</div>
+<div style="float: left">
+
+</div>
+<p>Maxime studies the molecular changes that converted wild plants to
+crops using grain amaranth as a model. <!-- break --> <br> <br> <br>
+<br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/people/Schilbert_Hanna_Marie.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Hanna Marie Schilbert</strong>
+<div style="float: left">
+<p><a href=""><img src="own_images/scholar.png" style="width: 30px;"></a></p>
+</div>
+<div style="float: left">
+
+</div>
+<p>Hanna studies how pleiotropy evolves as part of <a
+href="https://trr341.uni-koeln.de/">TRR 341</a>. <!-- break --> <br>
+<br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
 <p><img src="own_images/people/akanksha.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Akanksha Singh</strong>
+<div style="float: left">
+<p><a href="https://scholar.google.com/citations?hl=en&user=ymVnY3IAAAAJ"><img src="own_images/scholar.png" style="width: 30px;"></a>
+<a href="mailto:asingh3@uni-koeln.de"><img src="own_images/email_icon.png" style="width: 30px;"></a></p>
+</div>
 <div style="float: left">
 
 </div>
@@ -426,10 +456,15 @@ and the sources of adaptive alleles. <!-- break --> <br> <br> <br> <br>
 </div>
 <strong>Margarita Takou</strong>
 <div style="float: left">
+<p><a href="https://scholar.google.com/citations?user=raYNChEAAAAJ&hl=en"><img src="own_images/scholar.png" style="width: 30px;"></a>
+<a href="mailto:mtakou1@uni-koeln.de"><img src="own_images/email_icon.png" style="width: 30px;"></a></p>
+</div>
+<div style="float: left">
 
 </div>
 <p>Margarita studies polygenic selection in an experimental population
-of European maize. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+of European maize. <!-- break --> <br> <br> <br> <br> <br> <br> <br>
+<br> <br></p>
 </div>
 <div id="phd-candidates" class="section level2">
 <h2>PhD candidates</h2>
@@ -444,6 +479,15 @@ of European maize. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 amaranth and how it changed during the repeated domestication.
 <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
+<p><img src="own_images/people/ella_ludwig.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Ella Ludwig</strong>
+<div style="float: left">
+
+</div>
+<p>Ella studies stuctural variation in amaranth. <!-- break --> <br>
+<br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
 <p><img src="own_images/people/SusanneVollmer.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Susanne Vollmer</strong>
@@ -454,8 +498,8 @@ amaranth and how it changed during the repeated domestication.
 collaboration with the <a
 href="https://www.ceplas.eu/en/research/people/dr-goetz-hensel">Hensel
 lab at HHU</a>. Susanne advances various molecular methods for amaranth
-and dissects the regulation of seed color adaptation. <!-- break -->
-<br> <br> <br> <br> <br> <br> <br></p>
+and dissects the regulation of betalain pigments. <!-- break --> <br>
+<br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/tom.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
@@ -474,7 +518,8 @@ involvement of transcriptomic changes in metabolic pathways
 
 </div>
 <p>Yuna studies polygenic adaptation and the evolution of trait
-syndromes as part of the TRR 341</p>
+syndromes as part of the <a href="https://trr341.uni-koeln.de/">TRR
+341</a>.</p>
 <!-- break -->
 <p><br> <br> <br> <br> <br> <br> <br></p>
 </div>
@@ -490,17 +535,26 @@ syndromes as part of the TRR 341</p>
 <p>Katharina runs the office and does the paper work magic
 <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 </div>
-<div id="lab-manager" class="section level2">
-<h2>Lab manager</h2>
+<div id="lab-managers" class="section level2">
+<h2>Lab managers</h2>
 <div style="float: left">
-<p><img src="own_images/people/roswitha.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/EvelinFahle.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Roswitha Lentz</strong>
+<strong>Evelin Fahle</strong>
 <div style="float: left">
 
 </div>
-<p>Roswitha runs the wet lab and does the pipetting magic <!-- break -->
-<br> <br> <br> <br> <br> <br> <br></p>
+<p>Evelin runs our large scale applications and does pipetting magic
+<!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+<div style="float: left">
+<p><img src="own_images/people/Leia2024.jpg" style="width: 100px ;border:10px solid white"></p>
+</div>
+<strong>Leia Mijatovic</strong>
+<div style="float: left">
+
+</div>
+<p>Leia runs the cloning and molecular analysis in the wet lab and does
+pipetting magic <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <!-- break
 <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
@@ -552,14 +606,14 @@ stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
 <p>Fernanda helps with wet lab duties. <!-- break --> <br> <br> <br>
 <br> <br> <br> <br></p>
 <div style="float: left">
-<p><img src="own_images/people/ella_ludwig.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
-<strong>Ella Ludwig</strong>
+<strong>Sophie Feyerabend</strong>
 <div style="float: left">
 
 </div>
-<p>Ella studies stuctural variation in amaranth. <!-- break --> <br>
-<br> <br> <br> <br> <br> <br></p>
+<p>Sophie helps with plant work and field experiments. <!-- break -->
+<br> <br> <br> <br> <br> <br> <br></p>
 <!-- break 
 
 <div style="float: left">
