--- a/reading.html
+++ b/reading.html
@@ -397,12 +397,12 @@ $(document).ready(function () {
 
 <p> </p>
 <p>C.R.O.P is our weekly journal club for anyone interested in
-evolution. We meet on Tuesday at 4.00 pm at <a
+evolution. We meet on Tuesday at 4.15 pm at <a
 href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a>
 for an open discussion about the weekly paper in a relaxed
 atmosphere.</p>
 <p><strong>Until further notice we will meet in the seminar room on the
-4th floor of the Biocenter</strong></p>
+3rd floor of the Biocenter</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
