--- a/research.html
+++ b/research.html
@@ -447,6 +447,23 @@ evolutionary short time. Additionally, for many crops, such as maize,
 phenotype and genotype data is available for a large number of
 individuals over many generations.</p>
 </div>
+<div id="evolution-of-pathway-replacement" class="section level2">
+<h2>Evolution of pathway replacement</h2>
+<p><img src="own_images/cover_NP_amaranth.png" /></p>
+<p>Novel traits can provide fitness advantages and drive evolution. New
+specialised metabolites are traits that arose in different plant
+lineages, and even replaced existing metabolites. Why, and how almost
+universal metabolic pathways can be replaced in entire groups of species
+by biochemically distinct pathways without persistence of any species
+producing both metabolites remains unknown.</p>
+<p>The replacement of the widely conserved red pigment anthocyanin by
+the biochemically distinct betalains offers a unique opportunity to
+understand the integration of novel traits into existing regulatory
+systems. Notably, no plant species producing both anthocyanins and
+betalains has yet been identified, but both show similar environmental
+responses. We study the evolution of betalain pigments in a multi-scale
+apporach.</p>
+</div>
 <div id="our-models" class="section level1">
 <h1>Our models</h1>
 <div id="domestication-genomics-of-amaranth" class="section level2">
@@ -486,6 +503,14 @@ small founder populations and intense selection. We also make use of
 genomic data from doubled haploid libraries, generated from heterozygous
 maize landraces, and experimental populations to study the impact of
 negative alleles.</p>
+</div>
+<div id="our-work-is-supported-by" class="section level2">
+<h2>Our Work is supported by</h2>
+<ul>
+<li>DFG</li>
+<li>TRR 341</li>
+<li>BMBF</li>
+</ul>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YQ1CKNGTV5"></script>
 <script>
