--- a/people.html
+++ b/people.html
@@ -406,7 +406,7 @@ $(document).ready(function () {
 <p><a href="https://twitter.com/mgstetter"><img src="own_images/Twitter_logo_blue.png" style="width: 20px;"></a><a href="http://mstetter.github.io"><img src="own_images/Home_icon_black.png" style="width: 20px;"></a><a href="https://scholar.google.de/citations?user=yYKVZQQAAAAJ&hl=en"><img src="own_images/scholar.png" style="width: 30px;"></a><a href="http://github.com/mstetter"><img src="own_images/GitHub-Mark-32px.png" style="width:20px;"></a></p>
 </div>
 <p>Markus is group leader in the Institute for Plant Sciences at the
-University of Cologne <a href="about.html">read more</a></p>
+University of Cologne. <a href="about.html">read more</a></p>
 <!-- break -->
 <p><br> <br> <br> <!-- break --></p>
 <div id="postdocs" class="section level2">
@@ -508,7 +508,7 @@ and dissects the regulation of betalain pigments. <!-- break --> <br>
 
 </div>
 <p>Tom is a PhD student studying amaranth domestication and the
-involvement of transcriptomic changes in metabolic pathways
+involvement of transcriptomic changes in metabolic pathways.
 <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/Yuna_Zhang.jpg" style="width: 100px ;border:10px solid white"></p>
@@ -532,7 +532,7 @@ syndromes as part of the <a href="https://trr341.uni-koeln.de/">TRR
 <div style="float: left">
 
 </div>
-<p>Katharina runs the office and does the paper work magic
+<p>Katharina runs the office and does the paper work magic.
 <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="lab-managers" class="section level2">
@@ -544,7 +544,7 @@ syndromes as part of the <a href="https://trr341.uni-koeln.de/">TRR
 <div style="float: left">
 
 </div>
-<p>Evelin runs our large scale applications and does pipetting magic
+<p>Evelin runs our large scale applications and does pipetting magic.
 <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
 <p><img src="own_images/people/Leia2024.jpg" style="width: 100px ;border:10px solid white"></p>
@@ -554,7 +554,7 @@ syndromes as part of the <a href="https://trr341.uni-koeln.de/">TRR
 
 </div>
 <p>Leia runs the cloning and molecular analysis in the wet lab and does
-pipetting magic <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
+pipetting magic. <!-- break --> <br> <br> <br> <br> <br> <br> <br></p>
 <!-- break
 <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
@@ -590,14 +590,15 @@ stress in amaranth. <!-- break --> <br> <br> <br> <br> <br> <br>
 <div style="float: left">
 
 </div>
-<p>Carlotta develops grafting as tool for genome editing in amaranth</p>
+<p>Carlotta develops grafting as tool for genome editing in
+amaranth.</p>
 <!-- break -->
 <p><br> <br> <br> <br> <br> <br> <br></p>
 </div>
 <div id="student-helpers-and-interns" class="section level2">
 <h2>Student helpers and interns</h2>
 <div style="float: left">
-<p><img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/fernanda_Giampaoli.jpeg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Fernanda Daniela Giampaoli</strong>
 <div style="float: left">
