updates and CROP

--- a/contact.html
+++ b/contact.html
@@ -395,11 +395,10 @@ $(document).ready(function () {
 </div>
 
 
-<p><strong>Dr. Markus Stetter</strong></p>
+<p><strong>Markus Stetter</strong></p>
 <p>University of Cologne<br />
 Crop Evolution<br />
-Botanical Institute<br />
-Biozentrum<br />
+Institute for Plant Sciences Biozentrum<br />
 Zülpicher Str. 47b<br />
 50674 Cologne/Germany<br />
 mail: <a
@@ -417,7 +416,7 @@ web: <a href="https://cropevolution.org">cropevolution.org</a></p>
 </script>
 
 
-<p>	&copy; Markus Stetter 2020 <A HREF="impressum.html">Impressum</A> </p>
+<p>	&copy; Markus Stetter 2024 <A HREF="impressum.html">Impressum</A> </p>
 
 
 
