--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,23 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="september" class="section level3">
+<h3>September</h3>
+<div id="tuesday-september-10" class="section level4">
+<h4>Tuesday September 10</h4>
+<p><a
+href="https://academic.oup.com/evlett/advance-article/doi/10.1093/evlett/qrae033/7735308">Booker,
+2024</a> The structure of the environment influences the patterns and
+genetics of local adaptation</p>
+</div>
+<div id="tuesday-september-3" class="section level4">
+<h4>Tuesday September 3</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2024.08.22.609253v1">Fiscus,
+et al, preprint</a> Climate, population size, and dispersal influences
+mutational load across the landscape in Vitis arizonica</p>
+</div>
+</div>
 <div id="august" class="section level3">
 <h3>August</h3>
 <p>Summer break</p>
@@ -660,7 +677,7 @@ et al., 2023</a> Purging due to self-fertilization does not prevent
 accumulation of expansion load</p>
 </div>
 </div>
-<div id="september" class="section level3">
+<div id="september-1" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-21" class="section level4">
 <h4>Thursday September 21</h4>
@@ -874,7 +891,7 @@ href="https://www.science.org/doi/10.1126/science.abn5642">Exposito-Alonso,
 et al 2022</a> Genetic diversity loss in the Anthropocene</p>
 </div>
 </div>
-<div id="september-1" class="section level3">
+<div id="september-2" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-29" class="section level4">
 <h4>Thursday September 29</h4>
@@ -1114,7 +1131,7 @@ et al, preprint</a> Not so local: the population genetics of convergent
 adaptation in maize and teosinte</p>
 </div>
 </div>
-<div id="september-2" class="section level3">
+<div id="september-3" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-30" class="section level4">
 <h4>Thursday September 30</h4>
@@ -1394,7 +1411,7 @@ Corre et al. 2020</a> Adaptive introgression from maize has facilitated
 the establishment of teosinte as a noxious weed in Europe</p>
 </div>
 </div>
-<div id="september-3" class="section level3">
+<div id="september-4" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-24" class="section level4">
 <h4>Thursday September 24</h4>
@@ -1626,7 +1643,7 @@ sunflowers</p>
 <p>Holiday - No C.R.O.P</p>
 </div>
 </div>
-<div id="september-4" class="section level3">
+<div id="september-5" class="section level3">
 <h3>September</h3>
 <div id="thursday-september-26" class="section level4">
 <h4>Thursday September 26</h4>
@@ -1915,7 +1932,7 @@ et al preprint</a> Inferring the ancestry of everyone</p>
 </div>
 
 
-<p>	&copy; Markus Stetter 2020 <A HREF="impressum.html">Impressum</A> </p>
+<p>	&copy; Markus Stetter 2024 <A HREF="impressum.html">Impressum</A> </p>
 
 
 
