--- a/people.html
+++ b/people.html
@@ -501,7 +501,7 @@ lab at HHU</a>. Susanne advances various molecular methods for amaranth
 and dissects the regulation of betalain pigments. <!-- break --> <br>
 <br> <br> <br> <br> <br> <br></p>
 <div style="float: left">
-<p><img src="own_images/people/tom.jpg" style="width: 100px ;border:10px solid white"></p>
+<p><img src="own_images/people/Tom_Winkler_2024.jpg" style="width: 100px ;border:10px solid white"></p>
 </div>
 <strong>Tom Winkler</strong>
 <div style="float: left">
@@ -705,7 +705,7 @@ href="mailto:mgstetter@gmail.com">contact us</a></p>
 </div>
 
 
-<p>	&copy; Markus Stetter 2020 <A HREF="impressum.html">Impressum</A> </p>
+<p>	&copy; Markus Stetter 2024 <A HREF="impressum.html">Impressum</A> </p>
 
 
 
