--- a/reading.html
+++ b/reading.html
@@ -409,6 +409,20 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="september" class="section level3">
 <h3>September</h3>
+<div id="tuesday-september-24" class="section level4">
+<h4>Tuesday September 24</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2024.08.26.609732v1.full">Short
+and Streisfeld, preprint</a> The genomic outcomes of hybridization vary
+over time within a monkeyflower radiation</p>
+</div>
+<div id="tuesday-september-17" class="section level4">
+<h4>Tuesday September 17</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2024.02.14.580345v1.full">Long,
+preprint</a> Muller’s Ratchet in Action: The Erosion of Sexual
+Reproduction Genes in Domesticated Cassava (Manihot esculenta)</p>
+</div>
 <div id="tuesday-september-10" class="section level4">
 <h4>Tuesday September 10</h4>
 <p><a
