--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,16 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="october" class="section level3">
+<h3>October</h3>
+<div id="tuesday-october-1" class="section level4">
+<h4>Tuesday October 1</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2024.09.19.613351v1">Li,
+preprint</a> The utility of environmental data from traditional
+varieties for climate-adaptive maize breeding</p>
+</div>
+</div>
 <div id="september" class="section level3">
 <h3>September</h3>
 <div id="tuesday-september-24" class="section level4">
@@ -659,7 +669,7 @@ et al., preprint</a> Polygenic barriers to gene flow: the role of
 dominance, haploid selection and heterogeneous genetic architectures</p>
 </div>
 </div>
-<div id="october" class="section level3">
+<div id="october-1" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-26" class="section level4">
 <h4>Thursday October 26</h4>
@@ -890,7 +900,7 @@ the loss of an anthocyanin carrier protein in betalain-pigmented
 Caryophyllales</p>
 </div>
 </div>
-<div id="october-1" class="section level3">
+<div id="october-2" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-13" class="section level4">
 <h4>Thursday October 13</h4>
@@ -1123,7 +1133,7 @@ al, 2021</a> Genomic evidence of human selection on Vavilovian
 mimicry</p>
 </div>
 </div>
-<div id="october-2" class="section level3">
+<div id="october-3" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-28" class="section level4">
 <h4>Thursday October 28</h4>
@@ -1389,7 +1399,7 @@ et al, preprint</a> Experimental evolution of adaptive divergence under
 varying degrees of gene flow</p>
 </div>
 </div>
-<div id="october-3" class="section level3">
+<div id="october-4" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-29" class="section level4">
 <h4>Thursday October 29</h4>
@@ -1624,7 +1634,7 @@ et al 2019</a> The Genomic Basis for Short-Term Evolution of
 Environmental Adaptation in Maize</p>
 </div>
 </div>
-<div id="october-4" class="section level3">
+<div id="october-5" class="section level3">
 <h3>October</h3>
 <div id="thursday-october-31" class="section level4">
 <h4>Thursday October 31</h4>
