--- a/reading.html
+++ b/reading.html
@@ -409,6 +409,25 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="october" class="section level3">
 <h3>October</h3>
+<div id="tuesday-october-8" class="section level4">
+<h4>Tuesday October 8</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2024.09.25.614826v1.full">McKenzie
+et al, preprint</a> A massive community-science flower color dataset
+reveals convergent evolution of delayed flowering phenology in North
+American red-flowering plants</p>
+</div>
+<div id="tuesday-october-15" class="section level4">
+<h4>Tuesday October 15</h4>
+<p>TRR 341 seminar</p>
+</div>
+<div id="tuesday-october-8-1" class="section level4">
+<h4>Tuesday October 8</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2024.09.17.613564v1.full">Huang
+et al, preprint</a> Varying recombination landscapes between individuals
+are driven by polymorphic transposable elements</p>
+</div>
 <div id="tuesday-october-1" class="section level4">
 <h4>Tuesday October 1</h4>
 <p><a
