--- a/people.html
+++ b/people.html
@@ -429,7 +429,7 @@ crops using grain amaranth as a model. <!-- break --> <br> <br> <br>
 </div>
 <strong>Hanna Marie Schilbert</strong>
 <div style="float: left">
-<p><a href=""><img src="own_images/scholar.png" style="width: 30px;"></a></p>
+<p><a href="https://scholar.google.de/citations?hl=de&pli=1&user=jusNDNUAAAAJ"><img src="own_images/scholar.png" style="width: 30px;"></a></p>
 </div>
 <div style="float: left">
 
