--- a/publications.html
+++ b/publications.html
@@ -401,10 +401,15 @@ $(document).ready(function () {
 <div id="preprint" class="section level2">
 <h2>Preprint</h2>
 <ul>
-<li><a href="https://doi.org/10.1101/2024.06.07.597898">Local selection
-shaped the diversity of European maize landraces.</a><br />
-<strong>Takou, M, Schulz K and Stetter MG</strong> (2024). bioRxiv,
-2024-06.</li>
+<li><p><a
+href="https://www.biorxiv.org/content/10.1101/2024.09.04.610786v1">Going
+New Places: Successful Adaptation and Genomic Integrity of Grain
+Amaranth in India.</a><br />
+<strong>Singh, A and Stetter, MG</strong>. bioRxiv, 2024-09.</p></li>
+<li><p><a href="https://doi.org/10.1101/2024.06.07.597898">Local
+selection shaped the diversity of European maize landraces.</a><br />
+<strong>Takou, M, Schulz K and Stetter MG</strong>. bioRxiv,
+2024-06.</p></li>
 </ul>
 </div>
 <div id="section" class="section level2">
