--- a/reading.html
+++ b/reading.html
@@ -407,8 +407,23 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="november" class="section level3">
+<h3>November</h3>
+<div id="tuesday-november-5" class="section level4">
+<h4>Tuesday November 5</h4>
+<p><a href="https://www.science.org/doi/10.1126/science.ado5331">Ni et
+al, 2024</a> Human-driven evolution of color in a stonefly mimic</p>
+</div>
+</div>
 <div id="october" class="section level3">
 <h3>October</h3>
+<div id="tuesday-october-29" class="section level4">
+<h4>Tuesday October 29</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2024.10.03.615829v1.full">Schuh
+and Morris, preprint</a> Loss of pleiotropic regulatory functions in
+Tannin1, the sorghum ortholog of Arabidopsis master regulator TTG1</p>
+</div>
 <div id="tuesday-october-22" class="section level4">
 <h4>Tuesday October 22</h4>
 <p><a
@@ -649,7 +664,7 @@ et al., preprint</a> Conflicts in natural selection constrain adaptation
 to climate change in Arabidopsis thaliana</p>
 </div>
 </div>
-<div id="november" class="section level3">
+<div id="november-1" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-30" class="section level4">
 <h4>Thursday November 30</h4>
@@ -901,7 +916,7 @@ walnuts (Juglans regia)</p>
 </div>
 <div id="section-1" class="section level2">
 <h2>2022</h2>
-<div id="november-1" class="section level3">
+<div id="november-2" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-24" class="section level4">
 <h4>Thursday November 24</h4>
@@ -1130,7 +1145,7 @@ natural Mimulus population</p>
 Galápagos tomato</p>
 </div>
 </div>
-<div id="november-2" class="section level3">
+<div id="november-3" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-25" class="section level4">
 <h4>Thursday November 25</h4>
@@ -1387,7 +1402,7 @@ et al, preprint</a> A framework to quantify phenotypic and genotypic
 parallel evolution</p>
 </div>
 </div>
-<div id="november-3" class="section level3">
+<div id="november-4" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-26" class="section level4">
 <h4>Thursday November 26</h4>
@@ -1626,7 +1641,7 @@ Domestication and Environmental Conditions in Barley</p>
 <p>No C.R.O.P</p>
 </div>
 </div>
-<div id="november-4" class="section level3">
+<div id="november-5" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-28" class="section level4">
 <h4>Thursday November 28</h4>
@@ -1954,7 +1969,7 @@ href="https://www.nature.com/articles/s41477-018-0311-x.epdf?author_access_token
 et al. 2018</a> Unleashing meiotic crossovers in crops</p>
 </div>
 </div>
-<div id="november-5" class="section level3">
+<div id="november-6" class="section level3">
 <h3>November</h3>
 <div id="thursday-november-29" class="section level4">
 <h4>Thursday November 29</h4>
