--- a/reading.html
+++ b/reading.html
@@ -402,13 +402,34 @@ href="https://goo.gl/maps/mamsnSV5ZqThF4YY8">Theatercafe Filmdose</a>
 for an open discussion about the weekly paper in a relaxed
 atmosphere.</p>
 <p><strong>Until further notice we will meet in the seminar room on the
-3rd floor of the Biocenter</strong></p>
+3rd floor of the CoMB</strong></p>
 <p>Anybody is welcome to join us. The idea is that everyone reads the
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="november" class="section level3">
 <h3>November</h3>
+<div id="tuesday-november-26" class="section level4">
+<h4>Tuesday November 26</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2023.08.19.553731">Bertolini
+et al., 2023</a> Regulatory variation controlling architectural
+pleiotropy in maize</p>
+</div>
+<div id="tuesday-november-19" class="section level4">
+<h4>Tuesday November 19</h4>
+<p><a
+href="https://www.nature.com/articles/s41586-023-06053-0">Guillotin et
+al., 2023</a> A pan-grass transcriptome reveals patterns of cellular
+divergence in crops</p>
+</div>
+<div id="tuesday-november-12" class="section level4">
+<h4>Tuesday November 12</h4>
+<p><a
+href="https://academic.oup.com/evlett/advance-article/doi/10.1093/evlett/qrae039/7731525?login=false">Burgarella
+et al, 2024</a> Mating systems and recombination landscape strongly
+shape genetic diversity and selection in wheat relatives</p>
+</div>
 <div id="tuesday-november-5" class="section level4">
 <h4>Tuesday November 5</h4>
 <p><a href="https://www.science.org/doi/10.1126/science.ado5331">Ni et
