--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,16 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="december" class="section level3">
+<h3>December</h3>
+<div id="december-december-3" class="section level4">
+<h4>December December 3</h4>
+<p><a
+href="https://academic.oup.com/evlett/advance-article/doi/10.1093/evlett/qrae039/7731525?login=false">Burgarella
+et al, 2024</a> Mating systems and recombination landscape strongly
+shape genetic diversity and selection in wheat relatives</p>
+</div>
+</div>
 <div id="november" class="section level3">
 <h3>November</h3>
 <div id="tuesday-november-26" class="section level4">
@@ -422,13 +432,6 @@ pleiotropy in maize</p>
 href="https://www.nature.com/articles/s41586-023-06053-0">Guillotin et
 al., 2023</a> A pan-grass transcriptome reveals patterns of cellular
 divergence in crops</p>
-</div>
-<div id="tuesday-november-12" class="section level4">
-<h4>Tuesday November 12</h4>
-<p><a
-href="https://academic.oup.com/evlett/advance-article/doi/10.1093/evlett/qrae039/7731525?login=false">Burgarella
-et al, 2024</a> Mating systems and recombination landscape strongly
-shape genetic diversity and selection in wheat relatives</p>
 </div>
 <div id="tuesday-november-5" class="section level4">
 <h4>Tuesday November 5</h4>
@@ -675,7 +678,7 @@ driven by spatially variable purifying selection</p>
 </div>
 <div id="section" class="section level2">
 <h2>2023</h2>
-<div id="december" class="section level3">
+<div id="december-1" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-7" class="section level4">
 <h4>Thursday December 7</h4>
@@ -1150,7 +1153,7 @@ and the genetic basis of agronomic traits</p>
 </div>
 <div id="section-2" class="section level2">
 <h2>2021</h2>
-<div id="december-1" class="section level3">
+<div id="december-2" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-9" class="section level4">
 <h4>Thursday December 9</h4>
@@ -1406,7 +1409,7 @@ gene flow from South America</p>
 </div>
 <div id="section-3" class="section level2">
 <h2>2020</h2>
-<div id="december-2" class="section level3">
+<div id="december-3" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-10" class="section level4">
 <h4>Thursday December 10</h4>
@@ -1648,7 +1651,7 @@ Overdominance Promotes Diversity in Regions of Low Recombination</p>
 </div>
 <div id="section-4" class="section level2">
 <h2>2019</h2>
-<div id="december-3" class="section level3">
+<div id="december-4" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-12" class="section level4">
 <h4>Thursday December 12</h4>
@@ -1960,7 +1963,7 @@ legacy of maize in South America</p>
 </div>
 <div id="section-5" class="section level2">
 <h2>2018</h2>
-<div id="december-4" class="section level3">
+<div id="december-5" class="section level3">
 <h3>December</h3>
 <div id="thursday-december-27" class="section level4">
 <h4>Thursday December 27</h4>
