--- a/reading.html
+++ b/reading.html
@@ -409,6 +409,13 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="december" class="section level3">
 <h3>December</h3>
+<div id="december-december-17" class="section level4">
+<h4>December December 17</h4>
+<p><a
+href="https://www.cell.com/cell/abstract/S0092-8674(24)01277-7">Ramos-Madrigal
+et al, 2024</a> The genomic origin of early maize in eastern North
+America</p>
+</div>
 <div id="december-december-3" class="section level4">
 <h4>December December 3</h4>
 <p><a
