--- a/reading.html
+++ b/reading.html
@@ -407,17 +407,32 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
-<div id="december" class="section level3">
-<h3>December</h3>
-<div id="december-december-17" class="section level4">
-<h4>December December 17</h4>
+<div id="january" class="section level3">
+<h3>January</h3>
+<div id="tuesday-janaury-28" class="section level4">
+<h4>Tuesday Janaury 28</h4>
+<p><a href="https://www.science.org/doi/10.1126/science.ado5578">Groh et
+al, 2024</a> Ancient structural variants control sex-specific flowering
+time morphs in walnuts and hickories</p>
+</div>
+<div id="tuesday-janaury-21" class="section level4">
+<h4>Tuesday Janaury 21</h4>
+<p>TRR 341 Seminar</p>
+</div>
+<div id="tuesday-janaury-14" class="section level4">
+<h4>Tuesday Janaury 14</h4>
 <p><a
 href="https://www.cell.com/cell/abstract/S0092-8674(24)01277-7">Ramos-Madrigal
 et al, 2024</a> The genomic origin of early maize in eastern North
 America</p>
 </div>
-<div id="december-december-3" class="section level4">
-<h4>December December 3</h4>
+</div>
+<div id="section" class="section level2">
+<h2>2024</h2>
+<div id="december" class="section level3">
+<h3>December</h3>
+<div id="tuesday-december-3" class="section level4">
+<h4>Tuesday December 3</h4>
 <p><a
 href="https://academic.oup.com/evlett/advance-article/doi/10.1093/evlett/qrae039/7731525?login=false">Burgarella
 et al, 2024</a> Mating systems and recombination landscape strongly
@@ -673,7 +688,7 @@ in adaptive variation and the architecture of flowering time in
 Amaranthus tuberculatus</p>
 </div>
 </div>
-<div id="january" class="section level3">
+<div id="january-1" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-25" class="section level4">
 <h4>Thursday January 25</h4>
@@ -683,7 +698,8 @@ et al., 2023</a> The genomic distribution of transposable elements is
 driven by spatially variable purifying selection</p>
 </div>
 </div>
-<div id="section" class="section level2">
+</div>
+<div id="section-1" class="section level2">
 <h2>2023</h2>
 <div id="december-1" class="section level3">
 <h3>December</h3>
@@ -922,7 +938,7 @@ et al., preprint</a> Drivers of genomic landscapes of differentiation
 across Populus divergence gradient</p>
 </div>
 </div>
-<div id="january-1" class="section level3">
+<div id="january-2" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-26" class="section level4">
 <h4>Thursday January 26</h4>
@@ -945,7 +961,7 @@ walnuts (Juglans regia)</p>
 </div>
 </div>
 </div>
-<div id="section-1" class="section level2">
+<div id="section-2" class="section level2">
 <h2>2022</h2>
 <div id="november-2" class="section level3">
 <h3>November</h3>
@@ -1141,7 +1157,7 @@ et al 2022</a> Mutation bias reflects natural selection in Arabidopsis
 thaliana</p>
 </div>
 </div>
-<div id="january-2" class="section level3">
+<div id="january-3" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-27" class="section level4">
 <h4>Thursday January 27</h4>
@@ -1158,7 +1174,7 @@ and the genetic basis of agronomic traits</p>
 </div>
 </div>
 </div>
-<div id="section-2" class="section level2">
+<div id="section-3" class="section level2">
 <h2>2021</h2>
 <div id="december-2" class="section level3">
 <h3>December</h3>
@@ -1391,7 +1407,7 @@ Arabidopsis thaliana Reveals Multiple Sources of Introduction from
 Across Eurasia</p>
 </div>
 </div>
-<div id="january-3" class="section level3">
+<div id="january-4" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-28" class="section level4">
 <h4>Thursday January 28</h4>
@@ -1414,7 +1430,7 @@ gene flow from South America</p>
 </div>
 </div>
 </div>
-<div id="section-3" class="section level2">
+<div id="section-4" class="section level2">
 <h2>2020</h2>
 <div id="december-3" class="section level3">
 <h3>December</h3>
@@ -1645,7 +1661,7 @@ transposable element over-accumulation which provides variants for local
 adaptation</p>
 </div>
 </div>
-<div id="january-4" class="section level3">
+<div id="january-5" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-30" class="section level4">
 <h4>Thursday January 30</h4>
@@ -1656,7 +1672,7 @@ Overdominance Promotes Diversity in Regions of Low Recombination</p>
 </div>
 </div>
 </div>
-<div id="section-4" class="section level2">
+<div id="section-5" class="section level2">
 <h2>2019</h2>
 <div id="december-4" class="section level3">
 <h3>December</h3>
@@ -1929,7 +1945,7 @@ routes to adaptation</p>
 2019</a> Allele frequency dynamics in a pedigreed natural population</p>
 </div>
 </div>
-<div id="january-5" class="section level3">
+<div id="january-6" class="section level3">
 <h3>January</h3>
 <div id="thursday-january-31" class="section level4">
 <h4>Thursday January 31</h4>
@@ -1968,7 +1984,7 @@ legacy of maize in South America</p>
 </div>
 </div>
 </div>
-<div id="section-5" class="section level2">
+<div id="section-6" class="section level2">
 <h2>2018</h2>
 <div id="december-5" class="section level3">
 <h3>December</h3>
