--- a/reading.html
+++ b/reading.html
@@ -407,20 +407,49 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="february" class="section level3">
+<h3>February</h3>
+<div id="tuesday-february-25" class="section level4">
+<h4>Tuesday February 25</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2022.08.24.505198v4">Castellano
+et al, preprint</a> Detection of Domestication Signals through the
+Analysis of the Full Distribution of Fitness Effects</p>
+</div>
+<div id="tuesday-february-18" class="section level4">
+<h4>Tuesday February 18</h4>
+<p><a href="https://www.nature.com/articles/s41586-024-08458-x">Shaw et
+al, 2025</a> Global meta-analysis shows action is needed to halt genetic
+diversity loss</p>
+</div>
+<div id="tuesday-february-11" class="section level4">
+<h4>Tuesday February 11</h4>
+<p><a
+href="https://royalsocietypublishing.org/doi/10.1098/rstb.2023.0322">Chevin
+and Bridle, 2025</a> Impacts of limits to adaptation on population and
+community persistence in a changing environment</p>
+</div>
+<div id="tuesday-february-4" class="section level4">
+<h4>Tuesday February 4</h4>
+<p><a href="https://www.nature.com/articles/s41586-024-08476-9">Cheng et
+al, 2025</a> Leveraging a phased pangenome for haplotype design of
+hybrid potato</p>
+</div>
+</div>
 <div id="january" class="section level3">
 <h3>January</h3>
-<div id="tuesday-janaury-28" class="section level4">
-<h4>Tuesday Janaury 28</h4>
+<div id="tuesday-january-28" class="section level4">
+<h4>Tuesday January 28</h4>
 <p><a href="https://www.science.org/doi/10.1126/science.ado5578">Groh et
 al, 2024</a> Ancient structural variants control sex-specific flowering
 time morphs in walnuts and hickories</p>
 </div>
-<div id="tuesday-janaury-21" class="section level4">
-<h4>Tuesday Janaury 21</h4>
+<div id="tuesday-january-21" class="section level4">
+<h4>Tuesday January 21</h4>
 <p>TRR 341 Seminar</p>
 </div>
-<div id="tuesday-janaury-14" class="section level4">
-<h4>Tuesday Janaury 14</h4>
+<div id="tuesday-january-14" class="section level4">
+<h4>Tuesday January 14</h4>
 <p><a
 href="https://www.cell.com/cell/abstract/S0092-8674(24)01277-7">Ramos-Madrigal
 et al, 2024</a> The genomic origin of early maize in eastern North
@@ -915,7 +944,7 @@ al., 2023</a> Wild progenitors provide a sound baseline model for
 evolutionary analysis of domesticated crop species</p>
 </div>
 </div>
-<div id="february" class="section level3">
+<div id="february-1" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-23" class="section level4">
 <h4>Thursday February 23</h4>
@@ -1136,7 +1165,7 @@ et al preprint</a> Rapid adaptation and range expansion in response to
 agriculture over the last two centuries</p>
 </div>
 </div>
-<div id="february-1" class="section level3">
+<div id="february-2" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-17" class="section level4">
 <h4>Thursday February 17</h4>
@@ -1378,7 +1407,7 @@ et al 2012</a> Patterns and processes in crop domestication: an
 historical review and quantitative analysis of 203 global food crops</p>
 </div>
 </div>
-<div id="february-2" class="section level3">
+<div id="february-3" class="section level3">
 <h3>February</h3>
 <div id="thursday-febraury-25" class="section level4">
 <h4>Thursday Febraury 25</h4>
@@ -1634,7 +1663,7 @@ et al. 2020</a> In the presence of population structure: From genomics
 to candidate genes underlying local adaptation</p>
 </div>
 </div>
-<div id="february-3" class="section level3">
+<div id="february-4" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-27" class="section level4">
 <h4>Thursday February 27</h4>
@@ -1915,7 +1944,7 @@ and Coop preprint</a> The Linked Selection Signature of Rapid Adaptation
 in Temporal Genomic Data</p>
 </div>
 </div>
-<div id="february-4" class="section level3">
+<div id="february-5" class="section level3">
 <h3>February</h3>
 <div id="thursday-february-28" class="section level4">
 <h4>Thursday February 28</h4>
