--- a/reading.html
+++ b/reading.html
@@ -13,7 +13,7 @@
 
 <title>What we read</title>
 
-<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -32,8 +32,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-6.4.2/css/v4-shims.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.5.2/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.5.2/css/v4-shims.min.css" rel="stylesheet" />
 <link href="site_libs/ionicons-2.0.1/css/ionicons.min.css" rel="stylesheet" />
 <!-- Slideshow container -->
 <div class="slideshow-container" ></div>
@@ -407,6 +407,32 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="april" class="section level3">
+<h3>April</h3>
+<div id="tuesday-april-8" class="section level4">
+<h4>Tuesday April 8</h4>
+<p><a href="https://www.nature.com/articles/s41477-025-01905-1">Zhang et
+al, 2025</a> Transposon proliferation drives genome architecture and
+regulatory evolution in wild and domesticated peppers</p>
+</div>
+<div id="tuesday-april-1" class="section level4">
+<h4>Tuesday April 1</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2025.03.03.641344v1">Sedeek
+et al, preprint</a> Nutritional quality and genetic differences of five
+amaranth cultivars revealed by metabolome profiling and whole-genome
+sequencing</p>
+</div>
+</div>
+<div id="march" class="section level3">
+<h3>March</h3>
+<div id="tuesday-march-25" class="section level4">
+<h4>Tuesday March 25</h4>
+<p><a href="https://www.nature.com/articles/s41559-025-02653-3">Zhang et
+al, 2025</a> Genetic basis of camouflage in an alpine plant and its
+long-term co-evolution with an insect herbivore</p>
+</div>
+</div>
 <div id="february" class="section level3">
 <h3>February</h3>
 <div id="tuesday-february-25" class="section level4">
@@ -644,7 +670,7 @@ al, 2024</a> A pan-genome of 69 Arabidopsis thaliana accessions reveals
 a conserved genome structure throughout the global species range</p>
 </div>
 </div>
-<div id="april" class="section level3">
+<div id="april-1" class="section level3">
 <h3>April</h3>
 <div id="tuesday-april-30" class="section level4">
 <h4>Tuesday April 30</h4>
@@ -672,7 +698,7 @@ et al, preprint</a> Repeated global adaptation across plant species</p>
 <p>Easter break</p>
 </div>
 </div>
-<div id="march" class="section level3">
+<div id="march-1" class="section level3">
 <h3>March</h3>
 <div id="tuesday-march-26" class="section level4">
 <h4>Tuesday March 26</h4>
@@ -897,7 +923,7 @@ et al., preprint</a> Simple scaling laws control the genetic
 architectures of human complex traits</p>
 </div>
 </div>
-<div id="april-1" class="section level3">
+<div id="april-2" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-27" class="section level4">
 <h4>Thursday April 27</h4>
@@ -914,7 +940,7 @@ al., preprint</a> Heritable microbiome variation is correlated with
 source environment in locally adapted maize varieties</p>
 </div>
 </div>
-<div id="march-1" class="section level3">
+<div id="march-2" class="section level3">
 <h3>March</h3>
 <div id="thursday-march-30" class="section level4">
 <h4>Thursday March 30</h4>
@@ -1118,7 +1144,7 @@ al 2022</a> Parallel reduction in flowering time from de novo mutations
 enable evolutionary rescue in colonizing lineages</p>
 </div>
 </div>
-<div id="april-2" class="section level3">
+<div id="april-3" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-28" class="section level4">
 <h4>Thursday April 28</h4>
@@ -1146,7 +1172,7 @@ et al preprint</a> Insights into the domestication of avocado and
 potential genetic contributors to heterodichogamy</p>
 </div>
 </div>
-<div id="march-2" class="section level3">
+<div id="march-3" class="section level3">
 <h3>March</h3>
 <div id="thursday-march-17" class="section level4">
 <h4>Thursday March 17</h4>
@@ -1358,7 +1384,7 @@ et al 2021</a> Deleterious mutation accumulation and the long-term fate
 of chromosomal inversions</p>
 </div>
 </div>
-<div id="april-3" class="section level3">
+<div id="april-4" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-29" class="section level4">
 <h4>Thursday April 29</h4>
@@ -1381,7 +1407,7 @@ et al preprint</a> Gene network simulations provide testable predictions
 for the molecular domestication syndrome</p>
 </div>
 </div>
-<div id="march-3" class="section level3">
+<div id="march-4" class="section level3">
 <h3>March</h3>
 <div id="thursday-march-25" class="section level4">
 <h4>Thursday March 25</h4>
@@ -1642,7 +1668,7 @@ href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.100
 and Scally 2020</a> What is ancestry?</p>
 </div>
 </div>
-<div id="march-4" class="section level3">
+<div id="march-5" class="section level3">
 <h3>March</h3>
 <div id="thursday-march-19" class="section level4">
 <h4>Thursday March 19</h4>
@@ -1901,7 +1927,7 @@ landscape during a radiation of monkeyflowers</p>
 <h3>May</h3>
 <p>We took a little break to set up the lab and find a place</p>
 </div>
-<div id="april-4" class="section level3">
+<div id="april-5" class="section level3">
 <h3>April</h3>
 <div id="thursday-april-18" class="section level4">
 <h4>Thursday April 18</h4>
@@ -1917,7 +1943,7 @@ vigor and viability triggered in backcross populations of teosinte with
 maize</p>
 </div>
 </div>
-<div id="march-5" class="section level3">
+<div id="march-6" class="section level3">
 <h3>March</h3>
 <div id="thursday-march-28" class="section level4">
 <h4>Thursday March 28</h4>
