--- a/reading.html
+++ b/reading.html
@@ -409,6 +409,15 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="april" class="section level3">
 <h3>April</h3>
+<div id="tuesday-april-22" class="section level4">
+<h4>Tuesday April 22</h4>
+<p>Easter break</p>
+</div>
+<div id="tuesday-april-15" class="section level4">
+<h4>Tuesday April 15</h4>
+<p><a href="https://www.nature.com/articles/s41588-025-02122-4">Liu et
+al, 2025</a> Origin and de novo domestication of sweet orange</p>
+</div>
 <div id="tuesday-april-8" class="section level4">
 <h4>Tuesday April 8</h4>
 <p><a href="https://www.nature.com/articles/s41477-025-01905-1">Zhang et
