--- a/reading.html
+++ b/reading.html
@@ -409,6 +409,13 @@ paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="april" class="section level3">
 <h3>April</h3>
+<div id="tuesday-april-29" class="section level4">
+<h4>Tuesday April 29</h4>
+<p><a
+href="https://www.science.org/doi/abs/10.1126/science.adp3745">Gompert
+et al, 2025</a> Adaptation repeatedly uses complex structural genomic
+variation</p>
+</div>
 <div id="tuesday-april-22" class="section level4">
 <h4>Tuesday April 22</h4>
 <p>Easter break</p>
