--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,36 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="may" class="section level3">
+<h3>May</h3>
+<div id="tuesday-may-27" class="section level4">
+<h4>Tuesday May 27</h4>
+<p><a
+href="https://academic.oup.com/mbe/article/41/7/msae121/7695851">Gautier
+et al, 2024</a> Genomic Reconstruction of the Successful Establishment
+of a Feralized Bovine Population on the Subantarctic Island of
+Amsterdam</p>
+</div>
+<div id="tuesday-may-20" class="section level4">
+<h4>Tuesday May 20</h4>
+<p><a href="https://www.science.org/doi/10.1126/science.adq0018">Kistler
+et al, 2025</a> Historic manioc genomes illuminate maintenance of
+diversity under long-lived clonal cultivation</p>
+</div>
+<div id="tuesday-may-13" class="section level4">
+<h4>Tuesday May 13</h4>
+<p><a href="https://www.nature.com/articles/s41467-025-58021-z">Jiang et
+al, 2025</a> Incorporating genetic load contributes to predicting
+Arabidopsis thaliana’s response to climate change</p>
+</div>
+<div id="tuesday-may-6" class="section level4">
+<h4>Tuesday May 6</h4>
+<p><a
+href="https://www.science.org/doi/10.1126/science.adr1010">Anderson et
+al, 2025</a> Adaptation and gene flow are insufficient to rescue a
+montane plant under climate change</p>
+</div>
+</div>
 <div id="april" class="section level3">
 <h3>April</h3>
 <div id="tuesday-april-29" class="section level4">
@@ -655,7 +685,7 @@ and Hahn, preprint</a> Selection leads to false inferences of
 introgression using popular methods</p>
 </div>
 </div>
-<div id="may" class="section level3">
+<div id="may-1" class="section level3">
 <h3>May</h3>
 <div id="tuesday-may-28" class="section level4">
 <h4>Tuesday May 28</h4>
@@ -923,7 +953,7 @@ al., 2023</a> A pan-genome of 72 Arabidopsis thaliana accessions reveals
 a conserved genome structure throughout the global species range</p>
 </div>
 </div>
-<div id="may-1" class="section level3">
+<div id="may-2" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-25" class="section level4">
 <h4>Thursday May 25</h4>
@@ -1146,7 +1176,7 @@ et al preprint</a> Low heritability of crossover rate in wild
 sticklebacks</p>
 </div>
 </div>
-<div id="may-2" class="section level3">
+<div id="may-3" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-12" class="section level4">
 <h4>Thursday May 12</h4>
@@ -1376,7 +1406,7 @@ et al, preprint</a> Polygenic routes lead to parallel altitudinal
 adaptation in Heliosperma pusillum (Caryophyllaceae)</p>
 </div>
 </div>
-<div id="may-3" class="section level3">
+<div id="may-4" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-27" class="section level4">
 <h4>Thursday May 27</h4>
@@ -1657,7 +1687,7 @@ and Weigel 2020</a> Identifying genetic variants underlying phenotypic
 variation in plants without complete genomes</p>
 </div>
 </div>
-<div id="may-4" class="section level3">
+<div id="may-5" class="section level3">
 <h3>May</h3>
 <div id="thursday-may-28" class="section level4">
 <h4>Thursday May 28</h4>
@@ -1939,7 +1969,7 @@ et al preprint</a> Widespread selection and gene flow shape the genomic
 landscape during a radiation of monkeyflowers</p>
 </div>
 </div>
-<div id="may-5" class="section level3">
+<div id="may-6" class="section level3">
 <h3>May</h3>
 <p>We took a little break to set up the lab and find a place</p>
 </div>
