--- a/reading.html
+++ b/reading.html
@@ -407,6 +407,34 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="june" class="section level3">
+<h3>June</h3>
+<div id="tuesday-june-24" class="section level4">
+<h4>Tuesday June 24</h4>
+<p><a href="https://doi.org/10.1101/2025.05.07.652616">Razo-Mejia et al,
+preprint</a> Learning the Shape of Evolutionary Landscapes: Geometric
+Deep Learning Reveals Hidden Structure in Phenotype-to-Fitness Maps</p>
+</div>
+<div id="tuesday-june-17" class="section level4">
+<h4>Tuesday June 17</h4>
+<p><a
+href="https://academic.oup.com/evolut/advance-article-abstract/doi/10.1093/evolut/qpaf070/8110000">Chevin
+and Chauhan, 2025</a> Evolution of plasticity and character displacement
+in a fluctuating environment</p>
+</div>
+<div id="tuesday-june-10" class="section level4">
+<h4>Tuesday June 10</h4>
+<p><a href="https://doi.org/10.1101/2025.05.27.656262">Almeida-Silva and
+Van de Peer, preprint</a> Gene expression divergence following gene and
+genome duplications in spatially resolved plant transcriptomes</p>
+</div>
+<div id="tuesday-june-03" class="section level4">
+<h4>Tuesday June 03</h4>
+<p><a href="https://doi.org/10.1126/science.ads2871">Chen et al,
+2025</a> A single domestication origin of adzuki bean in Japan and the
+evolution of domestication genes</p>
+</div>
+</div>
 <div id="may" class="section level3">
 <h3>May</h3>
 <div id="tuesday-may-27" class="section level4">
@@ -669,7 +697,7 @@ et al, 2022</a> The Dynamics of Adaptation to Stress from Standing
 Genetic Variation and de novo Mutations</p>
 </div>
 </div>
-<div id="june" class="section level3">
+<div id="june-1" class="section level3">
 <h3>June</h3>
 <div id="tuesday-june-25" class="section level4">
 <h4>Tuesday June 25</h4>
@@ -931,7 +959,7 @@ et al., 2023</a> Crop domestication as a step toward reproductive
 isolation</p>
 </div>
 </div>
-<div id="june-1" class="section level3">
+<div id="june-2" class="section level3">
 <h3>June</h3>
 <div id="thursday-june-22" class="section level4">
 <h4>Thursday June 22</h4>
@@ -1154,7 +1182,7 @@ et al preprint</a> Allele-specific expression reveals multiple paths to
 highland adaptation in maize</p>
 </div>
 </div>
-<div id="june-2" class="section level3">
+<div id="june-3" class="section level3">
 <h3>June</h3>
 <div id="thursday-june-23" class="section level4">
 <h4>Thursday June 23</h4>
@@ -1671,7 +1699,7 @@ et al 2020</a> Genomic Evidence for Complex Domestication History of the
 Cultivated Tomato in Latin America</p>
 </div>
 </div>
-<div id="june-3" class="section level3">
+<div id="june-4" class="section level3">
 <h3>June</h3>
 <div id="thursday-june-18" class="section level4">
 <h4>Thursday June 18</h4>
@@ -1943,7 +1971,7 @@ disentangling local adaptation from altitudinal gradient selection in
 snapdragon plants</p>
 </div>
 </div>
-<div id="june-4" class="section level3">
+<div id="june-5" class="section level3">
 <h3>June</h3>
 <div id="thursday-june-27" class="section level4">
 <h4>Thursday June 27</h4>
