--- a/publications.html
+++ b/publications.html
@@ -401,6 +401,10 @@ $(document).ready(function () {
 <div id="preprint" class="section level2">
 <h2>Preprint</h2>
 <ul>
+<li><p><a href="https://doi.org/10.1101/2025.04.17.649361">Domestication
+shaped the chromatin landscape of grain amaranth</a><br />
+<strong>Graf, C, Winkler, TS</strong>, Maughan, PJ, and <strong>Stetter,
+MG</strong></p></li>
 <li><p><a
 href="https://www.biorxiv.org/content/10.1101/2024.09.04.610786v1">Going
 New Places: Successful Adaptation and Genomic Integrity of Grain
