CROP and Papers

--- a/publications.html
+++ b/publications.html
@@ -403,28 +403,32 @@ $(document).ready(function () {
 <ul>
 <li><p><a href="https://doi.org/10.1101/2025.04.17.649361">Domestication
 shaped the chromatin landscape of grain amaranth</a><br />
-<strong>Graf, C, Winkler, TS</strong>, Maughan, PJ, and <strong>Stetter,
-MG</strong></p></li>
-<li><p><a
-href="https://www.biorxiv.org/content/10.1101/2024.09.04.610786v1">Going
-New Places: Successful Adaptation and Genomic Integrity of Grain
-Amaranth in India.</a><br />
-<strong>Singh, A and Stetter, MG</strong>. bioRxiv, 2024-09.</p></li>
+<strong>Graf C, Winkler TS</strong>, Maughan PJ and <strong>Stetter,
+MG</strong>. bioRxiv</p></li>
 <li><p><a href="https://doi.org/10.1101/2025.02.22.639339">First
 Successful Targeted Mutagenesis Using CRISPR/Cas9 in Stably Transformed
 Grain Amaranth Tissue</a><br />
-<strong>Vollmer, SK, Stetter, MG</strong> and Hensel, G. bioRxiv,
-2025-02.</p></li>
+<strong>Vollmer SK, Stetter MG</strong> and Hensel G. bioRxiv</p></li>
 </ul>
 </div>
 <div id="section" class="section level2">
 <h2>2025</h2>
 <ul>
-<li><a href="https://doi.org/10.1111/mec.17720">Local selection shaped
-the diversity of European maize landraces.</a><br />
+<li><p><a
+href="https://www.biorxiv.org/content/10.1101/2024.09.04.610786v1">Going
+New Places: Successful Adaptation and Genomic Integrity of Grain
+Amaranth in India.</a><br />
+<strong>Singh, A and Stetter MG</strong>.</p></li>
+<li><p><a href="">Assessing and Mining Grain Amaranth Diversity for
+Sustainable Cropping Systems</a><br />
+<strong>Stetter MG</strong>, Joshi D and <strong>Singh
+A</strong></p></li>
+<li><p><a href="https://doi.org/10.1111/mec.17720">Local selection
+shaped the diversity of European maize landraces.</a><br />
 <strong>Takou, M, Schulz K and Stetter MG</strong>. <em>Molecular
 Ecology</em><br />
-<a href="https://doi.org/10.1101/2024.06.07.597898">preprint</a>.</li>
+<a
+href="https://doi.org/10.1101/2024.06.07.597898">preprint</a>.</p></li>
 </ul>
 </div>
 <div id="section-1" class="section level2">
