--- a/reading.html
+++ b/reading.html
@@ -407,8 +407,50 @@ atmosphere.</p>
 paper before and we dive directly in without formal presentation of the
 paper. If you would like to suggest a paper please email <a
 href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
+<div id="august" class="section level3">
+<h3>August</h3>
+<p>Summer break</p>
+</div>
+<div id="july" class="section level3">
+<h3>July</h3>
+<div id="tuesday-july-29" class="section level4">
+<h4>Tuesday July 29</h4>
+<p><a
+href="https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3003226">Korfmann,
+et al, preprint</a> Coalescence and Translation: A Language Model for
+Population Genetics</p>
+</div>
+<div id="tuesday-july-22" class="section level4">
+<h4>Tuesday July 22</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2025.05.28.654549v1">Wu et
+al, preprint</a> Rapid adaptation and extinction across climates in
+synchronized outdoor evolution experiments of Arabidopsis thaliana</p>
+</div>
+<div id="tuesday-july-15" class="section level4">
+<h4>Tuesday July 15</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2025.05.15.654381v1.full">Celebioglu
+et al, preprint</a> A domestication change at PvMYB26 in common bean
+sheds light on the origins of Middle American agriculture</p>
+</div>
+<div id="tuesday-july-8" class="section level4">
+<h4>Tuesday July 8</h4>
+<p><a
+href="https://www.biorxiv.org/content/10.1101/2023.10.16.562583v2.full">Ruffley
+et al, preprint</a> Selection constraints of plant adaptation can be
+relaxed by gene editing</p>
+</div>
+</div>
 <div id="june" class="section level3">
 <h3>June</h3>
+<div id="tuesday-june-30" class="section level4">
+<h4>Tuesday June 30</h4>
+<p><a
+href="https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3003226">Lutz
+et al, preprint</a> Species-wide gene editing of a flowering regulator
+reveals hidden phenotypic variation</p>
+</div>
 <div id="tuesday-june-24" class="section level4">
 <h4>Tuesday June 24</h4>
 <p><a href="https://doi.org/10.1101/2025.05.07.652616">Razo-Mejia et al,
@@ -657,11 +699,11 @@ et al, preprint</a> Climate, population size, and dispersal influences
 mutational load across the landscape in Vitis arizonica</p>
 </div>
 </div>
-<div id="august" class="section level3">
+<div id="august-1" class="section level3">
 <h3>August</h3>
 <p>Summer break</p>
 </div>
-<div id="july" class="section level3">
+<div id="july-1" class="section level3">
 <h3>July</h3>
 <div id="tuesday-july-30" class="section level4">
 <h4>Tuesday July 30</h4>
@@ -927,7 +969,7 @@ al., 2023</a> Structure and function of rice hybrid genomes reveal
 genetic basis and optimal performance of heterosis</p>
 </div>
 </div>
-<div id="august-1" class="section level3">
+<div id="august-2" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-24" class="section level4">
 <h4>Thursday August 24</h4>
@@ -936,7 +978,7 @@ Divergent sorting of a balanced ancestral polymorphism underlies the
 establishment of gene-flow barriers in Capsella</p>
 </div>
 </div>
-<div id="july-1" class="section level3">
+<div id="july-2" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-20" class="section level4">
 <h4>Thursday July 20</h4>
@@ -1163,7 +1205,7 @@ et al 2022</a> Uncovering the genomic basis of an extraordinary plant
 invasion</p>
 </div>
 </div>
-<div id="august-2" class="section level3">
+<div id="august-3" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-25" class="section level4">
 <h4>Thursday August 25</h4>
@@ -1172,7 +1214,7 @@ al 2022</a> The megabase-scale crossover landscape is largely
 independent of sequence divergence</p>
 </div>
 </div>
-<div id="july-2" class="section level3">
+<div id="july-3" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-28" class="section level4">
 <h4>Thursday July 28</h4>
@@ -1387,7 +1429,7 @@ et al, 2021</a> An ancestral recombination graph of human, Neanderthal,
 and Denisovan genomes</p>
 </div>
 </div>
-<div id="august-3" class="section level3">
+<div id="august-4" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-26" class="section level4">
 <h4>Thursday August 26</h4>
@@ -1417,7 +1459,7 @@ and Osborne, 2021</a> Crop origins explain variation in global
 agricultural relevance</p>
 </div>
 </div>
-<div id="july-3" class="section level3">
+<div id="july-4" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-29" class="section level4">
 <h4>Thursday July 29</h4>
@@ -1676,7 +1718,7 @@ introgression patterns in intraspecific hybrids between wild and
 domesticated barley</p>
 </div>
 </div>
-<div id="july-4" class="section level3">
+<div id="july-5" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-16" class="section level4">
 <h4>Thursday July 16</h4>
@@ -1902,7 +1944,7 @@ et al 2019</a> Impact of demography on linked selection in two
 outcrossing Brassicaceae species</p>
 </div>
 </div>
-<div id="august-4" class="section level3">
+<div id="august-5" class="section level3">
 <h3>August</h3>
 <div id="thursday-august-29" class="section level4">
 <h4>Thursday August 29</h4>
@@ -1940,7 +1982,7 @@ genomic landscape of recombination rate variation in European Aspen
 (Populus tremula)</p>
 </div>
 </div>
-<div id="july-5" class="section level3">
+<div id="july-6" class="section level3">
 <h3>July</h3>
 <div id="thursday-july-25" class="section level4">
 <h4>Thursday July 25</h4>
