--- a/publications.html
+++ b/publications.html
@@ -414,17 +414,18 @@ Grain Amaranth Tissue</a><br />
 <div id="section" class="section level2">
 <h2>2025</h2>
 <ul>
-<li><p><a
-href="https://www.biorxiv.org/content/10.1101/2024.09.04.610786v1">Going
-New Places: Successful Adaptation and Genomic Integrity of Grain
-Amaranth in India.</a><br />
-<strong>Singh, A and Stetter MG</strong>.</p></li>
-<li><p><a href="">Assessing and Mining Grain Amaranth Diversity for
-Sustainable Cropping Systems</a><br />
-<strong>Stetter MG</strong>, Joshi D and <strong>Singh
-A</strong></p></li>
+<li><p><a href="https://doi.org/10.1007/s00122-025-04940-w">Assessing
+and mining grain amaranth diversity for sustainable cropping
+systems</a><br />
+<strong>Stetter MG</strong>, Joshi DC and <strong>Singh A</strong>
+<em>Theor Appl Genet</em></p></li>
+<li><p><a href="https://doi.org/10.1111/eva.70124">Going New Places:
+Successful Adaptation and Genomic Integrity of Grain Amaranth in
+India.</a><br />
+<strong>Singh, A and Stetter MG</strong>. <a
+href="https://www.biorxiv.org/content/10.1101/2024.09.04.610786v1">Preprint</a></p></li>
 <li><p><a href="https://doi.org/10.1111/mec.17720">Local selection
-shaped the diversity of European maize landraces.</a><br />
+shaped the diversity of European maize landraces.</a>.<br />
 <strong>Takou, M, Schulz K and Stetter MG</strong>. <em>Molecular
 Ecology</em><br />
 <a
