--- a/reading.html
+++ b/reading.html
@@ -416,16 +416,17 @@ href="mailto:m.stetter@uni-koeln.de">Markus</a>.</p>
 <div id="tuesday-july-29" class="section level4">
 <h4>Tuesday July 29</h4>
 <p><a
-href="https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3003226">Korfmann,
-et al, preprint</a> Coalescence and Translation: A Language Model for
-Population Genetics</p>
-</div>
-<div id="tuesday-july-22" class="section level4">
-<h4>Tuesday July 22</h4>
-<p><a
 href="https://www.biorxiv.org/content/10.1101/2025.05.28.654549v1">Wu et
 al, preprint</a> Rapid adaptation and extinction across climates in
 synchronized outdoor evolution experiments of Arabidopsis thaliana</p>
+</div>
+<div id="tuesday-july-22" class="section level4">
+<h4>Tuesday July 22</h4>
+<p>[Zebell, et al, 2025]<a
+href="https://www.nature.com/articles/s41586-025-09243-0"
+class="uri">https://www.nature.com/articles/s41586-025-09243-0</a>)
+Cryptic variation fuels plant phenotypic change through hierarchical
+epistasis</p>
 </div>
 <div id="tuesday-july-15" class="section level4">
 <h4>Tuesday July 15</h4>
